--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -127,8 +127,8 @@ nav label {
 
     .toggle {
         position: relative;
-        top: 5.2rem;
-        width: 37px;
+        top: 5.4rem;
+        width: 33px;
         right: 8px;
     }
 }
@@ -165,8 +165,8 @@ nav label {
 
     .toggle {
         position: relative;
-        top: 5.4rem;
-        width: 47px;
+        top: 5.6rem;
+        width: 43px;
         right: 8px;
     }
 }
