--- a/src/pages/Services/styles.css
+++ b/src/pages/Services/styles.css
@@ -240,12 +240,10 @@ html {
   margin-top: 9rem;
   display: flex;
   justify-content: center;
+  background-image: url(../../assets/img/banner-bg2.svg);
+  background-size: contain;
 }
 
-.secondary-banner-bg {
-  position: absolute;
-  width: 100dvw;
-}
 
 .secondary-banner-vector {
   position: absolute;
@@ -395,11 +393,13 @@ html {
   }
 
   .secondary-banner-bg {
-    height: 450px;
+    height: 390px;
+    width: auto;
   }
 
   .secondary-banner-text {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
+    line-height: 4rem;
   }
 
   .secondary-banner-vector {
